--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -15,12 +15,18 @@ jobs:
       - uses: actions/checkout@v2
       - name: install dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y qt5-default qtdeclarative5-dev cmake
-      - name: configure
-        run: cmake . -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr
-      - name: build
-        run: make -j`nproc`  install DESTDIR=AppDir
+          sudo apt-get -y -qq update
+          sudo apt-get -y -qq install curl build-essential pkg-config bison flex autoconf automake libtool make git libssl-dev
+          sudo apt-get -y -qq install python2
+          sudo apt-get -y -qq install python2.7
+          sudo apt-get -y -qq install python-wxgtk3.0
+          sudo apt-get -y -qq install libssl-dev
+          sudo apt-get -y -qq install libxml2-dev libxslt1-dev
+          sudo apt-get -y -qq install python2-dev
+          sudo apt-get -y -qq install python2.7-dev
+          sudo apt-get -y -qq install libpng
+          sudo apt-get -y -qq install libpng-dev libfreetype6-dev          
+
       - name: Build AppImage
         uses: AppImageCrafters/build-appimage-action@master
         env:
