--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -2,9 +2,9 @@ name: C/C++ AppImage
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, ci-appimage ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, ci-appimage  ]
 
 jobs:
   build-appimage:
