--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -40,7 +40,8 @@ jobs:
           export ARCH=x86_64
           mkdir -p AppDir
           mv editor AppDir/
-          "python editor/Beremiz.py" > AppDir/AppRun      
+          echo "python editor/Beremiz.py" > AppDir/AppRun
+          chmod +x AppDir/AppRun      
 
       - name: Build AppImage
         uses: AppImageCrafters/build-appimage-action@master
