--- a/AppImageBuilder.yml
+++ b/AppImageBuilder.yml
@@ -1,4 +1,7 @@
 version: 1
+script:
+  - python2 -m pip install --system --ignore-installed --prefix=/usr --root=AppDir
+  - source usr/bin/activate
 AppDir:
   path: ./
   app_info:
