--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -13,28 +13,48 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - run: apt -y update
       - name: install dependencies
-        run: |
-          sudo apt-get -y -qq update
-          sudo apt-get -y -qq install curl
-          sudo apt-get -y -qq install build-essential
-          sudo apt-get -y -qq install pkg-config 
-          sudo apt-get -y -qq install bison
-          sudo apt-get -y -qq install flex 
-          sudo apt-get -y -qq install autoconf 
-          sudo apt-get -y -qq install automake 
-          sudo apt-get -y -qq install libtool 
-          sudo apt-get -y -qq install make 
-          sudo apt-get -y -qq install git 
-          sudo apt-get -y -qq install libssl-dev
-          sudo apt-get -y -qq install python2
-          sudo apt-get -y -qq install python2.7
-          sudo apt-get -y -qq install python-wxgtk3.0
-          sudo apt-get -y -qq install libssl-dev
-          sudo apt-get -y -qq install libxml2-dev libxslt1-dev
-          sudo apt-get -y -qq install python2-dev
-          sudo apt-get -y -qq install python2.7-dev
-          sudo apt-get -y -qq install 'libpng*'
+        run: DEBIAN_FRONTEND=noninteractive apt -y install 
+          curl
+          build-essential
+          pkg-config 
+          bison
+          flex 
+          autoconf 
+          automake 
+          libtool 
+          make 
+          git 
+          libssl-dev
+          python2
+          python2.7
+          python-wxgtk3.0
+          libssl-dev
+          libxml2-dev
+          libxslt1-dev
+          python2-dev
+          python2.7-dev
+          'libpng*'          
+          # sudo apt-get -y -qq install curl
+          # sudo apt-get -y -qq install build-essential
+          # sudo apt-get -y -qq install pkg-config 
+          # sudo apt-get -y -qq install bison
+          # sudo apt-get -y -qq install flex 
+          # sudo apt-get -y -qq install autoconf 
+          # sudo apt-get -y -qq install automake 
+          # sudo apt-get -y -qq install libtool 
+          # sudo apt-get -y -qq install make 
+          # sudo apt-get -y -qq install git 
+          # sudo apt-get -y -qq install libssl-dev
+          # sudo apt-get -y -qq install python2
+          # sudo apt-get -y -qq install python2.7
+          # sudo apt-get -y -qq install python-wxgtk3.0
+          # sudo apt-get -y -qq install libssl-dev
+          # sudo apt-get -y -qq install libxml2-dev libxslt1-dev
+          # sudo apt-get -y -qq install python2-dev
+          # sudo apt-get -y -qq install python2.7-dev
+          # sudo apt-get -y -qq install 'libpng*'
           #sudo apt-get -y -qq install libpng12-dev 
           sudo apt-get -y -qq install libfreetype6-dev
           export ARCH=x86_64
