--- a/AppImageBuilder.yml
+++ b/AppImageBuilder.yml
@@ -2,6 +2,7 @@ version: 1
 script:
   - python2 -m pip install --system --ignore-installed --prefix=/usr --root=AppDir
   - source usr/bin/activate
+  # pip2 install future zeroconf==0.19.1 numpy==1.16.5 matplotlib==2.0.2 lxml==4.6.2 pyro sslpsk pyserial
 AppDir:
   path: ./
   app_info:
