--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -16,8 +16,8 @@ jobs:
       #- run: 
       - name: install dependencies  # DEBIAN_FRONTEND=noninteractive 
         run: |
-          - sudo apt -y update
-          - sudo apt -y install  
+          - sudo apt-get -y update
+          - sudo apt-get -y install  
           curl
           build-essential
           pkg-config 
