--- a/.github/workflows/appimage_python.yml
+++ b/.github/workflows/appimage_python.yml
@@ -30,7 +30,7 @@ jobs:
           chmod +x python2.7.18-cp27-cp27m-manylinux1_x86_64.AppImage
           ./python2.7.18-cp27-cp27m-manylinux1_x86_64.AppImage --appimage-extract
           mv squashfs-root/* ./
-          rmdir squashfs-root
+          #rmdir squashfs-root
           #ln -s python3.11.0-cp311-cp311-manylinux2014_x86_64.AppDir/AppRun python2
       
       - name: install python packages
